--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -10,138 +10,172 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>about us</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
   </head>
   <body>
-<Header />
-<div class="section_1">
-<h2 class="citat1">“We want to make natural wine accessible for all people, keep it simple and at a good price.”</h2>
-<img class="billede1" src="thebar.png" alt="Billede">
-</div>
-<div class="section_2">
-    <h1>Our concept</h1>
-    <p>Since June 2018, we have worked tirelessly to provide people with the best possible natural wine at fair, honest, and democratic prices. While Pompette is possibly one of the most reasonably priced wine bars/shops in town, it is equally important to us that we have the best product possible.
-    <br>
-    <br>
-    With our combined experience in natural wine spanning decades, it is of the utmost importance to maintain the highest standard possible of professional acumen combined with our laid back atmosphere and relaxed approach to wine.
-    <br>
-    <br>
-    We aim to work with people we know and vouch for winemakers who understand the importance of regenerative agriculture. Whether or not it is certified organic or biodynamic, the Pompette team prioritises winemakers who are working with the right philosophy: to give more back to the earth what we get from it and minimise unwanted and unnecessary intervention in both farming and wine-making.</p>
-</div>
+    <Header />
+    <div class="section_1">
+      <h2 class="citat1">“We want to make natural wine accessible for all people, keep it simple and at a good price.”</h2>
+      <img class="billede1" src="thebar.png" alt="Billede" />
+    </div>
+    <div class="section_2">
+      <h1>Our Concept</h1>
+      <p>
+        Since June 2018, we have worked tirelessly to provide people with the best possible natural wine at fair, honest, and democratic prices. While Pompette is possibly one of the most reasonably priced wine bars/shops in town, it is equally important to us that we have the best product possible.
+        <br />
+        <br />
+        With our combined experience in natural wine spanning decades, it is of the utmost importance to maintain the highest standard possible of professional acumen combined with our laid back atmosphere and relaxed approach to wine.
+        <br />
+        <br />
+        We aim to work with people we know and vouch for winemakers who understand the importance of regenerative agriculture. Whether or not it is certified organic or biodynamic, the Pompette team prioritises winemakers who are working with the right philosophy: to give more back to the earth what
+        we get from it and minimise unwanted and unnecessary intervention in both farming and wine-making.
+      </p>
+    </div>
 
-<div class="section_3">
-<img src="red12.png" alt="red figur">
-<p>“Pompette” is a french slang, used to describe when you are sligthy drunk, or as we say in Danish “lettere beruset”. </p>
-</div>
+    <div class="section_3">
+      <img src="red12.png" alt="red figur" />
+      <p>“Pompette” is a french slang, used to describe when you are sligthy drunk, or as we say in Danish “lettere beruset”.</p>
+    </div>
 
-<img class="pompette" src="pompette.png" alt="pompette">
+    <img class="pompette" src="pompette.png" alt="pompette" />
 
-<div class="winemakers">
-    <h1>Meet our Winemakers</h1>
-    <p>We are proud to represent some of the most lovely and colourful people we have ever met. To truly represent someone we know and that we may call a friend is such an honour, and we hope that you can taste it in the wine. We are always looking for an end-product in harmony - not only with their philosophy but also with their personality: The people behind it. Below, you can meet just a couple of the winemakers we take pride in working with. If we were to talk about them all, this page would definitely be too long. </p>
-    <h2>Jean-Francois Ganevat</h2>
-    <p>Jean-François Ganevat, a visionary winemaker, is a master of his craft. With a deep respect for tradition and an adventurous spirit, Ganevat creates wines that are a true testament to his artistry. His meticulous attention to detail and commitment to biodynamic practices result in wines that are vibrant, expressive, and full of life. </p>
-    <img src="winemaker1.png" alt="winemaker1">
-    <h2>Christian Tschida</h2>
-    <p>Christian Tschida, a winemaker with an artistic soul, is known for crafting wines that defy convention and ignite the senses. With a passion for natural winemaking and a deep connection to his vineyards, Tschida creates wines that are a true expression of terroir. His innovative approach and dedication to organic practices result in wines that are vibrant, nuanced, and brimming with personality. </p>
-    <img src="winemaker2.png" alt="winemaker2">
-    <h2>Jean-Pierre Robinot</h2>
-    <p>Jean-Pierre Robinot, an enigmatic winemaker, is a true maverick of the vineyard. With a rebellious spirit and a profound respect for nature, Robinot creates wines that defy conventions and challenge expectations. His organic and biodynamic practices in the vineyard result in grapes that possess exceptional purity and character.</p>
-    <img src="winemaker3.png" alt="winemaker3">
-    <h2>Frederic Cossard</h2>
-    <p>Frederic Cossard, a visionary winemaker, is a true artisan of the vineyard. With a deep reverence for nature and a commitment to biodynamic principles, Cossard crafts wines that are a pure reflection of the land. His hands-on approach and meticulous attention to detail result in wines that are elegant, balanced, and filled with character. </p>
-    <img src="winemaker4.png" alt="winemaker4">
-</div>
-<Footer />
+    <div class="winemakers">
+      <h1>Meet our Winemakers</h1>
+      <p>
+        We are proud to represent some of the most lovely and colourful people we have ever met. To truly represent someone we know and that we may call a friend is such an honour, and we hope that you can taste it in the wine. We are always looking for an end-product in harmony - not only with
+        their philosophy but also with their personality: The people behind it. Below, you can meet just a couple of the winemakers we take pride in working with. If we were to talk about them all, this page would definitely be too long.
+      </p>
+      <h2>Jean-Francois Ganevat</h2>
+      <p>
+        Jean-François Ganevat, a visionary winemaker, is a master of his craft. With a deep respect for tradition and an adventurous spirit, Ganevat creates wines that are a true testament to his artistry. His meticulous attention to detail and commitment to biodynamic practices result in wines that
+        are vibrant, expressive, and full of life.
+      </p>
+      <img src="winemaker1.png" alt="winemaker1" />
+      <h2>Christian Tschida</h2>
+      <p>
+        Christian Tschida, a winemaker with an artistic soul, is known for crafting wines that defy convention and ignite the senses. With a passion for natural winemaking and a deep connection to his vineyards, Tschida creates wines that are a true expression of terroir. His innovative approach and
+        dedication to organic practices result in wines that are vibrant, nuanced, and brimming with personality.
+      </p>
+      <img src="winemaker2.png" alt="winemaker2" />
+      <h2>Jean-Pierre Robinot</h2>
+      <p>
+        Jean-Pierre Robinot, an enigmatic winemaker, is a true maverick of the vineyard. With a rebellious spirit and a profound respect for nature, Robinot creates wines that defy conventions and challenge expectations. His organic and biodynamic practices in the vineyard result in grapes that
+        possess exceptional purity and character.
+      </p>
+      <img src="winemaker3.png" alt="winemaker3" />
+      <h2>Frederic Cossard</h2>
+      <p>
+        Frederic Cossard, a visionary winemaker, is a true artisan of the vineyard. With a deep reverence for nature and a commitment to biodynamic principles, Cossard crafts wines that are a pure reflection of the land. His hands-on approach and meticulous attention to detail result in wines that
+        are elegant, balanced, and filled with character.
+      </p>
+      <img src="winemaker4.png" alt="winemaker4" />
+    </div>
+    <Footer />
   </body>
+</html>
 
-  <style>
-   /* .citat1{
-        color: red;
-        font-family: Poppins;
-        font-weight: lighter;
-        margin-left: 5%;
-    }
-    
-    .section_1{
-        display: flex;
-        margin-left: 3%;
-        margin-right: 7%;
+<style>
+  @media only screen and (max-width: 700px) {
+    .citat1 {
+      color: red;
+      font-family: athena, sans-serif;
+      font-weight: lighter;
+      margin-left: 5%;
+      margin-bottom: 7%;
+      font-size: 25px;
     }
 
-    .citat1{
-        font-size: 270%;
-        margin-top: 7%;
+    .billede1 {
+      width: 90%;
+      z-index: 1;
     }
 
-    .section_2{
-        background-color: #F3F3EB;
+    .section_2 {
+      background-color: #f3f3eb;
+      padding-top: 15%;
+      padding-bottom: 2%;
+      z-index: -1;
+      margin-top: -15%;
+      margin-bottom: 5%;
     }
- */
 
-    @media only screen and (max-width: 700px) {
-  .citat1{
-        color: red;
-        font-family: Poppins;
-        font-weight: lighter;
-        margin-left: 5%;
+    .section_2 h1 {
+      margin-left: 8%;
+      font-family: athena, sans-serif;
+      font-weight: 400;
+      font-size: 45px;
     }
-    
-  .billede1{
-    width: 90%;
-  }
 
-  .section_2{
-        background-color: #F3F3EB;
-  }
+    .section_2 p {
+      font-family: century-gothic, sans-serif;
+      line-height: 1.6em;
+      padding: 12px;
+      font-size: 14px;
+    }
 
-  .section_2 h1{
-    margin-left: 8%;
-  }
+    .section_3 p {
+      position: absolute;
+      margin-top: -38%;
+      margin-left: 19%;
+      margin-right: 20%;
+      font-size: 12px;
+      line-height: 1.5em;
+      text-align: center;
+      font-family: century-gothic, sans-serif;
+    }
 
-  .section_2 p{
-    font-family: Poppins;
-    line-height: 2em;
-    padding: 12px;
-  }
+    .section_3 img {
+      margin-left: 10%;
+      width: 80%;
+    }
 
-  .section_3 p{
-    position: absolute;
-    margin-top: -47%;
-    margin-left: 20%;
-    margin-right: 20%;
-    text-align: center;
-    font-family: Poppins;
-  }
+    .pompette {
+      width: 80%;
+      margin-left: 10%;
+      margin-top: 2%;
+    }
 
-  .section_3 img{
-    margin-left: 7%;
-    width: 90%;
-  }
+    .winemakers {
+      margin-bottom: 10%;
+    }
 
-  .pompette{
-    width: 80%;
-    margin-left: 10%;
-  }
-  
-  .winemakers h1, h2, p{
-    font-family: Poppins;
-    margin-left: 7%;
-    margin-right: 7%;
-  }
+    .winemakers h1,
+    h2,
+    p {
+      margin-left: 7%;
+      margin-right: 7%;
+    }
 
-  .winemakers h2{
-    text-align: center;
-  }
+    .winemakers h1 {
+      font-family: athena, sans-serif;
+      font-size: 45px;
+      font-weight: 400;
+    }
 
-  .winemakers p{
-    line-height: 2em;
-  }
+    .winemakers h2 {
+      text-align: center;
+      font-family: athena, sans-serif;
+      font-size: 25px;
+      font-weight: 400;
+    }
 
-  .winemakers img{
-    margin-left: 13%;
-    width: 70%;
+    .winemakers p {
+      line-height: 2em;
+      font-family: century-gothic, sans-serif;
+      font-size: 14px;
+      line-height: 1.6em;
+    }
 
+    .winemakers img {
+      margin: 0% 0% 4% 13%;
+      width: 70%;
+    }
   }
-}
-  </style>
+  @media only screen and (min-width: 700px) {
+    .section_1 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+</style>
