--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.astro";
   </head>
   <Header />
   <main>
-    <a href="listeview.astro" class="product"> ← BACK</a>
+    <a href="/listeview" class="product"> ← BACK</a>
     <h1>Overskrift</h1>
     <div class="grid2">
       <img src="public/rød1.jpg" alt="rød1" id="images_lille" />
