--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -118,6 +118,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       margin-top: 7%;
+      margin-bottom: 7%;
     }
     img {
       width: 90%;
