--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,8 +14,8 @@
       <h1>This month's x</h1>
       <div class="grid_2">
         <div class="grid_1-1">
-          <img src="public/rød1.jpg" alt="" />
-          <img src="public/rød.jpg" alt="" />
+          <img src="/rød1.jpg" alt="" />
+          <img src="/rød.jpg" alt="" />
         </div>
         <div class="beskrivelse">
           <p class="overskrift">Overskrift – <span>Navn</span> – <span>Årgang</span></p>
