--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,3 +1,7 @@
+---
+const { id, picture, picture2, name, type, love, link } = Astro.props;
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,25 +15,21 @@
   </head>
   <body>
     <main>
-      <h1>This month's x</h1>
+      <h1>This month's <span>{type}</span></h1>
       <div class="grid_2">
         <div class="grid_1-1">
-          <img src="/rød1.jpg" alt="" />
-          <img src="/rød.jpg" alt="" />
+          <img src={picture2} alt="" />
+          <img src={picture} alt="" />
         </div>
         <div class="beskrivelse">
-          <p class="overskrift">Overskrift – <span>Navn</span> – <span>Årgang</span></p>
+          <p class="overskrift">{name}</p>
           <div class="grid1-1">
             <div>
               <p>Why we love it:</p>
-              <ul>
-                <li>Ord 1</li>
-                <li>Ord 2</li>
-                <li>Ord 3</li>
-              </ul>
+              <p>{love}</p>
             </div>
             <div>
-              <a href="/singleview">
+              <a href={link}>
                 <div class="image-container">
                   <img class="hover" src="/tell_me_more_knap_hover.svg" alt="instagram" />
                   <img class="insta_knap" src="/tell_me_more_knap.svg" alt="instagram" />
